# rokey_4th_RobotCashier

./: .gitignore  README.md  data_strucure.md  heightmap_packing_final.py  readme.md
docs/: test.md
rl/: heightmap_packing_rl_colab_batched_hard_constraints_candidate_split_v2.ipynb  packing_service_core.py  packing_service_node.py  test_n_service_cashier_updated.py  test_n_updated.py
src/: heightmap_packing_rl_colab_batched_hard_constraints_candidate_split.ipynb  test.py
src/cashier_bringup/: dummy.md
src/cashier_execute_packing/: package.xml  setup.cfg  setup.py
src/cashier_execute_packing/cashier_execute_packing/: config.py  dummy_test_code.py  packing_executor.py  packing_models.py  pick_place_client.py  pick_place_planner.py  pose_normalizer.py  robot_control.py  rotation_planner.py  util.py
src/cashier_interfaces/: CMakeLists.txt  package.xml
src/cashier_interfaces/action/: ExecutePacking.action  ScanItems.action  VoiceSession.action
src/cashier_interfaces/msg/: Item.msg  ItemSpec.msg  Placement.msg
src/cashier_interfaces/srv/: ComputePackingPlan.srv
src/cashier_plan_packing/: package.xml  setup.cfg  setup.py
src/cashier_plan_packing/cashier_plan_packing/: inference.py  packing_node.py  packing_service_core.py  packing_service_node.py
src/cashier_vision/apriltag_pose_interfaces/: CMakeLists.txt  package.xml
src/cashier_vision/apriltag_pose_interfaces/action/: ScanItems.action
src/cashier_vision/apriltag_pose_interfaces/msg/: Item.msg
src/cashier_vision/apriltag_pose_py/: package.xml  setup.cfg  setup.py
src/cashier_vision/apriltag_pose_py/apriltag_pose_py/: apriltag_pose_node.py  vision_scan_items_action_server.py  yolo_3d_vis_node.py
src/cashier_vision/apriltag_pose_py/config/: item_specs.json
src/cashier_vision/cashier_interfaces/: setup.py
src/cashier_vision/qr_multi_reader/: package.xml  setup.cfg  setup.py
src/cashier_vision/qr_multi_reader/qr_multi_reader/: qr_multi_reader_node.py
src/cashier_voice/: package.xml  setup.cfg  setup.py
src/cashier_voice/object_detection/: detection.py  yolo.py
src/cashier_voice/resource/: data.yaml
src/cashier_voice/robot_control/: robot_cancel_helper.py  robot_control.py  robot_scan_helper.py
src/cashier_voice/voice_processing/: dummy_voice_client.py  get_keyword.py  test_cancel_helper.py  tts_helper.py  wakeup_word.py
src/cashier_workflow/: package.xml  setup.cfg  setup.py
src/cashier_workflow/cashier_workflow/: demo_backend_node.py  demo_execute_packing_node.py  demo_plan_packing_node.py  demo_vision_node.py  demo_voice_node.py  workflow_node.py  workflow_node_dev.py
src/cashier_workflow/launch/: demo.launch.py  demo_split.launch.py  demo_split_dev.launch.py
src/doosan-robot2/dsr_description2/meshes/e0509_collision/: E0509_4_1.dae
src/etc/: heightmap_packing_final.py  test_n.py
(+1 files in other folders)
