<?xml version="1.0"?>
<package format="3">
  <name>cashier_execute_packing</name>
  <version>0.0.0</version>
  <description>Robot control package</description>

  <maintainer email="rokey@example.com">rokey</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>cashier_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>