<?xml version="1.0"?>
<package format="3">
  <name>apriltag_pose_py</name>
  <version>0.0.0</version>
  <description>Python nodes for AprilTag and YOLO integration</description>

  <maintainer email="eogur1472@gmail.com">daehyuk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>apriltag_pose_interfaces</depend>

  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
